Fix margin, spacing, tooltips and save button for non-top bar positions

--- a/sass/import/_reset.scss
+++ b/sass/import/_reset.scss
@@ -2,7 +2,6 @@
 	
 	html {
 		margin-top: 0 !important;
-		position: relative;
 	}
 
 	.gdymc_inside, .gdymc_inside * {
